--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: Ashwin Bhola
 
 # Short description of your site
-description: 
+description: Blog
 
 # --- Navigation bar options --- #
 
