--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: Blog
 
 # List of links in the navigation bar
 navbar-links:
+  Home: "Regressionist.github.io"
   About Me: "aboutme"
   Projects: "projects"
   Resources:
