--- a/_config.yml
+++ b/_config.yml
@@ -26,10 +26,10 @@ navbar-links:
   Home: "Regressionist.github.io"
   About Me: "aboutme"
   Projects: "projects"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-    - GitHub Pages: "https://pages.github.com/"
+  #Resources:
+   # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
+    #- Learn markdown: "http://www.markdowntutorial.com/"
+    #- GitHub Pages: "https://pages.github.com/"
   Resume: "http://deanattali.com"
 
 # Image to show in the navigation bar - image must be a square (width = height)
