--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ social-network-links:
 #  twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
-  linkedin: ashwin-bhola-636841b8/
+  linkedin: ashwinbhola
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
