--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ navbar-links:
    # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
     #- GitHub Pages: "https://pages.github.com/"
-  Resume: "files/CV.pdf"
+  Resume: "files/Ashwin_Bhola_Resume.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
