--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (https://username.github.io) then use these settings:
-url: "https://Regressionist.github.io"
+url: "https://ashwinbhola.github.io"
 baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
@@ -25,13 +25,13 @@ description: Blog
 navbar-links:
   Home: ""
   About Me: "about"
-  Projects: "projects"
-  News: "news"
+  # Projects: "projects"
+  # News: "news"
   #Resources:
    # - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
     #- Learn markdown: "http://www.markdowntutorial.com/"
     #- GitHub Pages: "https://pages.github.com/"
-  Resume: "files/Ashwin_Bhola_Resume.pdf"
+  # Resume: "files/Ashwin_Bhola_Resume.pdf"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -76,8 +76,8 @@ author:
 social-network-links:
 #  rss: true
   email: ab8084@nyu.edu
-  facebook: ashwin.bhola.5
-  github: Regressionist
+  # facebook: ashwin.bhola.5
+  github: ashwinbhola
 #  twitter: daattali
 #  reddit: yourname
 #  google-plus: +DeanAttali
